[tool.poetry]
name = "hf-utils"
version = "0.1.0"
description = "Huggingface utils"
authors = ["Taemin Lee <persuade@gmail.com>"]
readme = "README.md"
packages = [{include = "hf_utils"}]

[tool.poetry.dependencies]
python = "^3.9"
huggingface-hub = "^0.26.3"
fire = "^0.7.0"
scikit-learn = "^1.5.2"
structlog = "^24.4.0"
datasets = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hf-utils = "hf_utils.hf_utils:main"